Major improvements: Move headers to navbar + Fix flashcard display
1. Move tool headers to main navbar:
   - Headers (Chat, Summarize, Quiz, Flashcards) now display in navbar-center
   - Right frame only shows generated content after button click
   - Cleaner layout with tool info in navbar

2. Fix flashcard display:
   - Added answer text to card-backing side
   - Card now properly shows both question and answer
   - Improved card-backing CSS styling
   - Answer displays with proper formatting and scrolling

3. UI/UX improvements:
   - navbar-center section with tool info
   - Better navbar layout with three sections (left, center, right)
   - More spacious right frame for content display

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,6 +90,9 @@
           <span id="pdf-count-display">Upload PDF to get started</span>
         </div>
       </div>
+      <div class="navbar-center" id="navbar-center">
+        <!-- Tool header will be dynamically inserted here -->
+      </div>
       <div class="navbar-right">
         <div id="user-info-header" class="user-info-header"></div>
         <!-- PDF Upload Dropdown Button -->
