--- a/frontend/index.html
+++ b/frontend/index.html
@@ -212,7 +212,8 @@
 
         <!-- Summarizer Tool -->
         <section id="summarizer-content" class="tool-content">
-          <div class="tool-controls">
+          <div class="tool-controls centered">
+            <p class="feature-description">Get a concise summary of your entire PDF document. Perfect for quickly understanding key points.</p>
             <button class="button-generate" onclick="handleSummarize()">
               <i class="fas fa-magic"></i>
               <span>Generate Summary</span>
@@ -224,7 +225,8 @@
 
         <!-- Quiz Tool -->
         <section id="quiz-content" class="tool-content">
-          <div class="tool-controls">
+          <div class="tool-controls centered">
+            <p class="feature-description">Create multiple-choice practice questions to test your understanding of the document.</p>
             <div class="control-group">
               <label>Number of Questions:</label>
               <input type="number" id="quiz-count" min="1" max="20" value="5" />
@@ -240,7 +242,8 @@
 
         <!-- Flashcards Tool -->
         <section id="flashcards-content" class="tool-content">
-          <div class="tool-controls">
+          <div class="tool-controls centered">
+            <p class="feature-description">Create interactive flashcards for effective learning and quick revision of important concepts.</p>
             <div class="control-group">
               <label>Number of Cards:</label>
               <input type="number" id="flashcards-count" min="1" max="30" value="10" />
