--- a/frontend/index.html
+++ b/frontend/index.html
@@ -228,7 +228,7 @@
           <div class="tool-controls centered">
             <p class="feature-description">Create multiple-choice practice questions to test your understanding of the document.</p>
             <div class="control-group">
-              <label>Number of Questions:</label>
+              <label><i class="fas fa-edit"></i> Number of Questions:</label>
               <input type="number" id="quiz-count" min="1" max="20" value="5" />
             </div>
             <button class="button-generate" onclick="handleQuiz()">
@@ -245,7 +245,7 @@
           <div class="tool-controls centered">
             <p class="feature-description">Create interactive flashcards for effective learning and quick revision of important concepts.</p>
             <div class="control-group">
-              <label>Number of Cards:</label>
+              <label><i class="fas fa-edit"></i> Number of Cards:</label>
               <input type="number" id="flashcards-count" min="1" max="30" value="10" />
             </div>
             <button class="button-generate" onclick="handleFlashcards()">
