--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,7 @@
           <i class="fas fa-brain"></i>
           <span>StudyAI</span>
         </div>
+        <div id="user-info-mobile" class="user-info-mobile"></div>
       </div>
       <div class="navbar-right">
         <div id="user-info-header" class="user-info-header"></div>
